@@ -304,10 +304,11 @@ error.NewAccountPooka.continueMessage=Would you like to re-enter your informatio
 error.noMatchingAddresses=<no matching addresses>
 error.parsingVcard=Error parsing V-Card
 error.savingVcard=Error saving Address Book
+error.savingAddress=Error saving Address
 error.noAddressBook=No Address Book set as Default.
 
 error.AddressBook.saveAddressBook=Error saving Address Book:  
-error.AddressBook.loadAddressBook=Error reloading Address Book:  
+error.AddressBook.loadAddressBook=Error reloading Address Book: 
 
 title.preferences=Edit Preferences
 title.storeConfig=Edit Mailbox Information
@@ -491,17 +492,6 @@ Pooka.attachmentSeparator=\n\n----- Attached File ------\n\n
 Pooka.html.attachmentSeparator=<br><hr><br>
 Pooka.html.messageTruncation=<br><br><b>------ Message truncated ------</b><br><br>
 
-Pooka.crypto.publicKey.forSig=Select key to verify the signature on this message.
-Pooka.crypto.publicKey.title=Select public key
-Pooka.crypto.publicKey.forEncrypt=Select key to encrypt this message.
-Pooka.crypto.privateKey.forDecrypt=Select key to decrypt this message.
-Pooka.crypto.privateKey.title=Select private key.
-Pooka.crypto.privateKey.forSig=Select key to sign this message.
-Pooka.crypto.passphrase.title=Enter Passphrase
-Pooka.crypto.passphrase.message=Enter Passphrase for key \n
-
-Pooka.crypto.encryptedMessage=******  This is an encrypted message.  Click on the 'encryption' button or go to Encrypt->Decrypt message to read it. ******
-
 AddressBook.editableFields.editor.config.label=Configuration
 AddressBook.editableFields.type.label=Type
 AddressBook.editableFields.edit.label=AddressBook Configuration
@@ -604,6 +594,19 @@ NewAccountPooka.useSent.label=Create/use existing Sent folder
 NewAccountPooka.enableDisconnected.label=Enable disconnected operation
 NewAccountPooka.pookaDirectory.label=Location of local files
 NewAccountPooka.inboxLocation.label=Location of inbox file
+
+Pooka.crypto.publicKey.forSig=Select key to verify the signature on this message.
+Pooka.crypto.publicKey.title=Select public key
+Pooka.crypto.publicKey.forEncrypt=Select key to encrypt this message.
+Pooka.crypto.privateKey.forDecrypt=Select key to decrypt this message.
+Pooka.crypto.privateKey.title=Select private key.
+Pooka.crypto.privateKey.forSig=Select key to sign this message.
+Pooka.crypto.passphrase.title=Enter Passphrase
+Pooka.crypto.passphrase.message=Enter Passphrase for key \n
+
+Pooka.crypto.encryptedMessage=******  This is an encrypted message.  Click on the 'encryption' button or go to Encrypt->Decrypt message to read it. ******
+
+Pooka.cache.errorCachingMessage=Error caching message
 
 Search.dateFormat=MM/dd/yyyy
 error.search.invalidDateFormat=Invalid date format:  
